# aoc-2025

./: .gitignore  pyproject.toml
01/: code.ipynb
02/: code.ipynb
03/: code.ipynb
04/: code.ipynb
05/: code.ipynb
06/: code.ipynb
07/: code.ipynb
08/: code.ipynb
09/: code.ipynb
10/: code.ipynb
11/: code.ipynb
12/: code.ipynb
