[project]
name = "aoc-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "rich>=14.2.0",
    "ruff>=0.14.7",
    "scipy>=1.16.3",
]
